--- a/BB-Analytics-Hackathon.ipynb
+++ b/BB-Analytics-Hackathon.ipynb
@@ -18,6 +18,386 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fangraphs_data = pd.read_csv(\"fangraphs_season_level.csv\")\n",
+    "savant_data = pd.read_csv(\"savant_pitch_level.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define thresholds\n",
+    "threshold_g_MR = 21  # 50th percentile\n",
+    "threshold_gs_MR = 1  # Slightly above minimum\n",
+    "min_ip_MR = 16.1     # 25th percentile\n",
+    "max_ip_MR = 112.1    # 75th percentile\n",
+    "threshold_percentage_LS = 0.75  # Hypothetical value, adjust based on your analysis\n",
+    "threshold_gmli_SU = 0.955314  # 75th percentile\n",
+    "threshold_hld_SU = 1          # 75th percentile\n",
+    "\n",
+    "threshold_sv_CL = 20  # High number of saves for Closers\n",
+    "min_ip_LR = 40        # Minimum innings pitched for Long Relievers\n",
+    "balance_threshold_SW = 0.3  # Minimum balance ratio of GS to (G-GS) for Swingmen\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Closer\n",
+    "def is_closer(row):\n",
+    "    return row['SV'] > threshold_sv_CL\n",
+    "\n",
+    "# Long Reliever\n",
+    "def is_long_reliever(row):\n",
+    "    return (row['IP'] > min_ip_LR) and not is_middle_reliever(row)\n",
+    "\n",
+    "# Swingman\n",
+    "def is_swingman(row):\n",
+    "    return row['GS'] / max(row['G'] - row['GS'], 1) > balance_threshold_SW\n",
+    "\n",
+    "# Middle Reliever\n",
+    "def is_middle_reliever(row):\n",
+    "    return row['G'] > threshold_g_MR and row['GS'] < threshold_gs_MR and min_ip_MR <= row['IP'] <= max_ip_MR\n",
+    "\n",
+    "# Lefty Specialist\n",
+    "def is_lefty_specialist(player_id):\n",
+    "    left_handed_batters_faced = savant_data[savant_data['stand'] == 'L'].groupby('pitcher').size().get(player_id, 0)\n",
+    "    total_batters_faced = savant_data.groupby('pitcher').size().get(player_id, 1)  # avoid division by zero\n",
+    "    percentage_left_handed_batters_faced = left_handed_batters_faced / total_batters_faced\n",
+    "    return percentage_left_handed_batters_faced > threshold_percentage_LS\n",
+    "\n",
+    "# Setup Man\n",
+    "def is_setup_man(row):\n",
+    "    return row['gmLI'] > threshold_gmli_SU and row['HLD'] > threshold_hld_SU\n",
+    "\n",
+    "fangraphs_data['additional_role'] = fangraphs_data.apply(\n",
+    "    lambda row: 'Middle Reliever' if is_middle_reliever(row) else\n",
+    "                'Lefty Specialist' if is_lefty_specialist(row['MLBAMID']) else\n",
+    "                'Setup Man' if is_setup_man(row) else\n",
+    "                'Closer' if is_closer(row) else\n",
+    "                'Long Reliever' if is_long_reliever(row) else\n",
+    "                'Swingman' if is_swingman(row) else\n",
+    "                'Other', axis=1)\n",
+    "\n",
+    "# Review the categorization\n",
+    "print(fangraphs_data['additional_role'].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Starting pitcher success analysis\n",
+    "starting_pitchers = fangraphs_data[fangraphs_data['Role'] == 'SP']\n",
+    "metrics_sp = ['IP', 'ERA', 'WHIP', 'K_per_9', 'FIP', 'xFIP', 'WPA', 'LOB_pct']\n",
+    "\n",
+    "# Visualizing the distribution of each metric\n",
+    "for metric in metrics_sp:\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "\n",
+    "    # Histogram\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    sns.histplot(starting_pitchers[metric], kde=True)\n",
+    "    plt.title(f'Histogram of {metric}')\n",
+    "\n",
+    "    # Boxplot\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    sns.boxplot(x=starting_pitchers[metric])\n",
+    "    plt.title(f'Boxplot of {metric}')\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Shapiro-Wilk Test\n",
+    "    stat, p = shapiro(starting_pitchers[metric].dropna())\n",
+    "    print(f'Shapiro-Wilk Test for {metric} - Statistics={stat}, p={p}')\n",
+    "    if p > 0.05:\n",
+    "        print('Sample looks Gaussian (normal distribution).')\n",
+    "    else:\n",
+    "        print('Sample does not look Gaussian (not normally distributed).')\n",
+    "\n",
+    "    # Compare Mean and Median\n",
+    "    mean_value = starting_pitchers[metric].mean()\n",
+    "    median_value = starting_pitchers[metric].median()\n",
+    "    print(f'Mean for {metric}: {mean_value}')\n",
+    "    print(f'Median for {metric}: {median_value}')\n",
+    "    print('\\n---\\n')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sp_metrics_summary = starting_pitchers[['IP', 'ERA', 'WHIP', 'K_per_9', 'FIP', 'xFIP', 'WPA', 'LOB_pct']].median()\n",
+    "sp_ids = starting_pitchers['MLBAMID'].unique()\n",
+    "sp_pitches = savant_data[savant_data['pitcher'].isin(sp_ids)]\n",
+    "sp_pitch_types = sp_pitches.groupby(['pitcher', 'pitch_type']).size().unstack().fillna(0)\n",
+    "sp_velocity = sp_pitches.groupby('pitcher')['release_speed'].mean()\n",
+    "sp_spin_rate = sp_pitches.groupby('pitcher')['release_spin_rate'].mean()\n",
+    "\n",
+    "\n",
+    "sp_velocity = sp_velocity.reset_index()\n",
+    "sp_spin_rate = sp_spin_rate.reset_index()\n",
+    "\n",
+    "sp_velocity = sp_velocity.rename(columns={'pitcher': 'MLBAMID'})\n",
+    "sp_spin_rate = sp_spin_rate.rename(columns={'pitcher': 'MLBAMID'})\n",
+    "\n",
+    "\n",
+    "starting_pitchers = starting_pitchers.merge(sp_pitch_types, left_on='MLBAMID', right_index=True, how='left')\n",
+    "starting_pitchers = starting_pitchers.merge(sp_velocity, on='MLBAMID', how='left')\n",
+    "starting_pitchers = starting_pitchers.merge(sp_spin_rate, on='MLBAMID', how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define success criteria based on multiple metrics for Starting Pitchers\n",
+    "success_criteria_sp = (\n",
+    "    (starting_pitchers['IP'] >= sp_metrics_summary['IP']) &\n",
+    "    (starting_pitchers['ERA'] <= sp_metrics_summary['ERA']) &\n",
+    "    (starting_pitchers['WHIP'] <= sp_metrics_summary['WHIP']) &\n",
+    "    (starting_pitchers['K_per_9'] >= sp_metrics_summary['K_per_9']) &\n",
+    "    (starting_pitchers['FIP'] <= sp_metrics_summary['FIP']) &\n",
+    "    (starting_pitchers['xFIP'] <= sp_metrics_summary['xFIP']) &\n",
+    "    (starting_pitchers['WPA'] >= sp_metrics_summary['WPA']) &\n",
+    "    (starting_pitchers['LOB_pct'] >= sp_metrics_summary['LOB_pct'])\n",
+    ")\n",
+    "# Filter successful and less successful Starting Pitchers\n",
+    "successful_sp = starting_pitchers[success_criteria_sp]\n",
+    "less_successful_sp = starting_pitchers[~success_criteria_sp]\n",
+    "\n",
+    "metrics_sp = ['IP', 'ERA', 'WHIP', 'K_per_9', 'FIP', 'xFIP', 'WPA', 'LOB_pct']\n",
+    "\n",
+    "\n",
+    "for metric in metrics_sp:\n",
+    "    median_successful = successful_sp[metric].median()\n",
+    "    median_less_successful = less_successful_sp[metric].median()\n",
+    "    print(f\"Median {metric} for successful SP: {median_successful}\")\n",
+    "    print(f\"Median {metric} for less successful SP: {median_less_successful}\")\n",
+    "    print('\\n---\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for metric in metrics_sp:\n",
+    "    stat, p = ttest_ind(successful_sp[metric].dropna(), less_successful_sp[metric].dropna())\n",
+    "    print(f\"{metric}: Statistics={stat}, p-value={p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "relief_pitchers = fangraphs_data[fangraphs_data['Role'] == 'RP']\n",
+    "metrics_rp = ['SV', 'HLD', 'ERA', 'WHIP', 'K_per_9', 'BB_per_9', 'WPA']\n",
+    "for metric in metrics_rp:\n",
+    "    plt.figure(figsize=(10, 4))\n",
+    "\n",
+    "    # Histogram\n",
+    "    plt.subplot(1, 2, 1)\n",
+    "    sns.histplot(relief_pitchers[metric], kde=True)\n",
+    "    plt.title(f'Histogram of {metric}')\n",
+    "\n",
+    "    # Boxplot\n",
+    "    plt.subplot(1, 2, 2)\n",
+    "    sns.boxplot(x=relief_pitchers[metric])\n",
+    "    plt.title(f'Boxplot of {metric}')\n",
+    "\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Shapiro-Wilk Test\n",
+    "    stat, p = shapiro(relief_pitchers[metric].dropna())\n",
+    "    print(f'Shapiro-Wilk Test for {metric} - Statistics={stat}, p={p}')\n",
+    "    if p > 0.05:\n",
+    "        print('Sample looks Gaussian (normal distribution).')\n",
+    "    else:\n",
+    "        print('Sample does not look Gaussian (not normally distributed).')\n",
+    "\n",
+    "    # Compare Mean and Median\n",
+    "    mean_value = relief_pitchers[metric].mean()\n",
+    "    median_value = relief_pitchers[metric].median()\n",
+    "    print(f'Mean for {metric}: {mean_value}')\n",
+    "    print(f'Median for {metric}: {median_value}')\n",
+    "    print('\\n---\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rp_metrics_summary = relief_pitchers[metrics_rp].median()\n",
+    "\n",
+    "\n",
+    "# Get unique MLBAM IDs for Relief Pitchers\n",
+    "rp_ids = relief_pitchers['MLBAMID'].unique()\n",
+    "\n",
+    "# Filter the savant_data for pitches thrown by Relief Pitchers\n",
+    "rp_pitches = savant_data[savant_data['pitcher'].isin(rp_ids)]\n",
+    "\n",
+    "# Group by pitcher and pitch type, count pitches of each type for each pitcher\n",
+    "rp_pitch_types = rp_pitches.groupby(['pitcher', 'pitch_type']).size().unstack().fillna(0)\n",
+    "\n",
+    "# Calculate average velocity and spin rate for each Relief Pitcher\n",
+    "rp_velocity = rp_pitches.groupby('pitcher')['release_speed'].mean()\n",
+    "rp_spin_rate = rp_pitches.groupby('pitcher')['release_spin_rate'].mean()\n",
+    "\n",
+    "# Reset index to turn the series into DataFrame\n",
+    "rp_velocity = rp_velocity.reset_index()\n",
+    "rp_spin_rate = rp_spin_rate.reset_index()\n",
+    "\n",
+    "# Rename columns for consistency\n",
+    "rp_velocity = rp_velocity.rename(columns={'pitcher': 'MLBAMID'})\n",
+    "rp_spin_rate = rp_spin_rate.rename(columns={'pitcher': 'MLBAMID'})\n",
+    "\n",
+    "# Merge pitch type counts, average velocity, and average spin rate with the relief_pitchers DataFrame\n",
+    "relief_pitchers = relief_pitchers.merge(rp_pitch_types, left_on='MLBAMID', right_index=True, how='left')\n",
+    "relief_pitchers = relief_pitchers.merge(rp_velocity, on='MLBAMID', how='left')\n",
+    "relief_pitchers = relief_pitchers.merge(rp_spin_rate, on='MLBAMID', how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert column index to a list and print\n",
+    "column_names = relief_pitchers.columns.tolist()\n",
+    "print(column_names)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define success criteria here\n",
+    "rp_metrics_summary = relief_pitchers[['SV_x', 'HLD', 'ERA', 'WHIP', 'K_per_9', 'BB_per_9', 'WPA']].median().rename('median')\n",
+    "\n",
+    "# Define success criteria based on multiple metrics for Relief Pitchers\n",
+    "success_criteria_rp = (\n",
+    "    (relief_pitchers['ERA'] <= rp_metrics_summary['ERA']) &\n",
+    "    (relief_pitchers['WHIP'] <= rp_metrics_summary['WHIP']) &\n",
+    "    (relief_pitchers['SV_x'] >= rp_metrics_summary['SV_x']) &\n",
+    "    (relief_pitchers['HLD'] >= rp_metrics_summary['HLD']) &\n",
+    "    (relief_pitchers['K_per_9'] >= rp_metrics_summary['K_per_9']) &\n",
+    "    (relief_pitchers['BB_per_9'] <= rp_metrics_summary['BB_per_9']) &\n",
+    "    (relief_pitchers['WPA'] >= rp_metrics_summary['WPA'])\n",
+    ")\n",
+    "\n",
+    "# Filter successful and less successful Relief Pitchers\n",
+    "successful_rp = relief_pitchers[success_criteria_rp]\n",
+    "less_successful_rp = relief_pitchers[~success_criteria_rp]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Define the metrics you want to compare. For example:\n",
+    "metrics_rp = ['SV_x', 'HLD', 'ERA', 'WHIP', 'K_per_9', 'BB_per_9', 'WPA']\n",
+    "\n",
+    "for metric in metrics_rp:\n",
+    "    median_successful = successful_rp[metric].median()\n",
+    "    median_less_successful = less_successful_rp[metric].median()\n",
+    "    print(f\"Median {metric} for successful RP: {median_successful}\")\n",
+    "    print(f\"Median {metric} for less successful RP: {median_less_successful}\")\n",
+    "    print('\\n---\\n')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for metric in metrics_rp:\n",
+    "    stat, p = ttest_ind(successful_rp[metric].dropna(), less_successful_rp[metric].dropna())\n",
+    "    print(f\"{metric}: Statistics={stat}, p-value={p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "less_successful_sp = less_successful_sp.drop_duplicates(subset='Name')\n",
+    "less_successful_rp = less_successful_rp.drop_duplicates(subset='Name')\n",
+    "starting_pitchers = starting_pitchers.drop_duplicates(subset='Name')\n",
+    "relief_pitchers = relief_pitchers.drop_duplicates(subset='Name')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter less successful SPs\n",
+    "less_successful_sp = starting_pitchers[~success_criteria_sp]\n",
+    "\n",
+    "# Count the frequency of each additional role within less successful SPs\n",
+    "additional_role_counts_sp = less_successful_sp['additional_role'].value_counts()\n",
+    "\n",
+    "# Create a bar plot to visualize the distribution of additional roles\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=additional_role_counts_sp.index, y=additional_role_counts_sp.values)\n",
+    "plt.title('Distribution of Additional Roles among Less Successful Starting Pitchers')\n",
+    "plt.xlabel('Additional Role')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of pitcher names from the provided cluster dataframe\n",
+    "pitcher_names = [\n",
+    "    \"Blake Snell\", \"Brandon Woodruff\", \"Clayton Kershaw\",\n",
+    "    \"Gerrit Cole\", \"Cole Ragans\", \"Tarik Skubal\"\n",
+    "]\n",
+    "\n",
+    "selected_pitchers = less_successful_sp[less_successful_sp['Name'].isin(pitcher_names)]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selected_columns = selected_pitchers[['Name', 'Role', 'additional_role']]\n",
+    "selected_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
