--- a/BB-Analytics-Hackathon.ipynb
+++ b/BB-Analytics-Hackathon.ipynb
@@ -22,6 +22,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Data Manipulation and Analysis\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Data Visualization\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import plotly.express as px\n",
+    "\n",
+    "from scipy.stats import shapiro\n",
+    "\n",
+    "# Statistical Modeling and Machine Learning\n",
+    "from scipy import stats\n",
+    "from scipy.stats import ttest_ind\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fangraphs_data = pd.read_csv(\"fangraphs_season_level.csv\")\n",
     "savant_data = pd.read_csv(\"savant_pitch_level.csv\")"
    ]
